// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Basic card renders correctly 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  Basic Card
</div>
`;

exports[`Card with body renders correctly 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  <h3
    class="lyzer-card-body"
  >
    Card Body
  </h3>
</div>
`;

exports[`Card with heading and body renders correctly 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  <span
    class="lyzer-card-heading"
  >
    Card Heading
  </span>
  <h3
    class="lyzer-card-body"
  >
    Card Body
  </h3>
</div>
`;

exports[`Card with heading renders correctly 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  <span
    class="lyzer-card-heading"
  >
    Card Heading
  </span>
</div>
`;

exports[`Card with section renders correctly 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  <div
    class="lyzer-card-section"
  >
    <h3
      class="lyzer-card-section-title"
    >
      Card Section Title
    </h3>
    <p
      class="lyzer-card-section-subtitle"
    >
      Card Section Subtitle
    </p>
    <hr
      class="lyzer-card-section-divider"
    />
  </div>
</div>
`;

exports[`Card with section renders correctly, including children 1`] = `
<div
  class="lyzer-card"
  data-testid="lyzer-card"
>
  <div
    class="lyzer-card-section"
  >
    <h3
      class="lyzer-card-section-title"
    >
      Card Section Title
    </h3>
    <p
      class="lyzer-card-section-subtitle"
    >
      Card Section Subtitle
    </p>
    <p>
      Card Section Content
    </p>
    <hr
      class="lyzer-card-section-divider"
    />
  </div>
</div>
`;
